[package]
name = "r2d2_mysql"
version = "18.0.1"
authors = ["outersky <outersky@gmail.com>"]
license = "MIT"
documentation = "http://outersky.github.io/r2d2-mysql/doc/v0.2.0/r2d2_mysql"
description = "MySQL support for the r2d2 connection pool"
repository = "https://github.com/the-notable/r2d2-mysql"
keywords = ["mysql", "sql", "pool", "database","r2d2"]


[dependencies]
r2d2 = "0.8.2"
mysql = { git = "https://github.com/the-notable/rust-mysql-simple" }


